# neurosift

./: .clinerules  .codespellrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CHANGELOG_through_July_2025.md  CITATION.cff  CNAME  README.md  changelog.md  codemeta.json  index.html  jinjaroot.yaml  package-lock.json  package.json  servicemeta.json  tsconfig.app.json  vercel.json  vite.config.ts
assets/: index-e8a705f3.css  index-f05b874c.css  spatialWorker-7e825138.js  worker-0b04a793.js  worker-1ff9599c.js  worker-4d87d852.js  worker-7cf63ef1.js  worker-b7ad4f8c.js
devel/: .gitignore  check_format.sh  create_dandi_lookup.py  create_meta_nwb_files.py  create_neurodata_type_inheritance.ipynb  dandi_examples.md  format_code.sh  generate_build_info.sh  process_avi_files.py  process_nwb_requests.py  process_twophoton_objects.py
doc/: ai_assistant_examples.md  audio_spectrograms.md  video.md  (+18 more)
job_runners/neurosift_job_runner_3/: .gitignore  Dockerfile  pyproject.toml
job_runners/neurosift_job_runner_3/src/neurosift_job_runner_3/: cli.py
job_runners/neurosift_job_runner_3/src/neurosift_job_runner_3/processors/: __init__.py
job_runners/neurosift_job_runner_3/src/neurosift_job_runner_3/processors/mountainsort5_processor/: Mountainsort5Processor.py  __init__.py  process_mountainsort5_job.py  run_mountainsort5.py
neurosift_job_runner/: pyproject.toml
neurosift_job_runner/src/neurosift_job_runner/: job_utils.py
neurosift_job_runner/src/neurosift_job_runner/processors/multiscale_spike_density/: __init__.py  multiscale_spike_density.py
neurosift_job_runner/src/neurosift_job_runner/processors/rastermap_processor/: RastermapProcessor.py
neurosift_job_runner/src/neurosift_job_runner/processors/text_letter_count/: text_letter_count.py
neurosift_job_runner_2/: Dockerfile  pyproject.toml
neurosift_job_runner_2/src/neurosift_job_runner_2/: __init__.py  cli.py
neurosift_job_runner_2/src/neurosift_job_runner_2/processors/: __init__.py
neurosift_job_runner_2/src/neurosift_job_runner_2/processors/image_series_to_mp4/: ImageSeriesToMp4Processor.py  __init__.py  process_image_series_to_mp4_job.py
python/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.cfg.j2  setup.py
python/dandi-index/: instructions.txt  update_data.sh
python/dandi-index/dandi-index-query-job-runner/: .gitignore  package-lock.json  package.json  tsconfig.json
python/dandi-index/dandi-index-query-job-runner/src/: dandi.ts  index.ts  jobRunner.ts  scriptInterface.ts  systemMessage.txt
python/dandi-index/scripts/: _embedding.py  _load_asset_info.py  _load_dandi_data.py  update_data.py
python/ebrains-index/scripts/: _load_ebrains_data.py  update_data.py
python/neurosift/: RtcsharePlugin.py  TemporaryDirectory.py  __init__.py  cli.py  nwb_server.py
python/neurosift/codecs/: MP4AVCCodec.py  __init__.py
python/neurosift/experimental-local-file-access/src/: index.js
python/neurosift/local-file-access-js/: README.md  package.json  readme.md
python/neurosift/local-file-access-js/src/: index.js
python/neurosift/views/: Autocorrelograms.py  AverageWaveforms.py  CrossCorrelograms.py  PositionDecodeField.py  SpikeTrains.py  TimeseriesAnnotation.py  TimeseriesGraph.py  VideoAnnotation.py  View.py  __init__.py  _serialize.py  create_audio_spectrogram.py  create_spike_sorting_digest.py  create_spike_sorting_summary.py
python/neurosift/views/helpers/: compute_correlogram_data.py  compute_templates.py  extract_snippets.py
python/openneuro-index/scripts/: _load_openneuro_data.py  update_data.py
(+1788 files in other folders)
