[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurosift_job_runner"
version = "0.1.0"
description = "Command line tool for running Neurosift jobs"
authors = [
    { name = "Jeremy Magland" },
]
# readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "pydantic",
    "numpy",
    "scipy",
    "lindi",
    "dendro>=0.6.22",
    "rastermap",
    "click",
]

[project.scripts]
neurosift-job-runner = "neurosift_job_runner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/neurosift_job_runner"]
