[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurosift_job_runner_3"
version = "0.1.0"
description = "Command line tool for running Neurosift jobs"
authors = [
    { name = "Jeremy Magland" },
]
# readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "pydantic",
    "numpy",
    "scipy",
    "spikeinterface",
    "mountainsort5",
    "click",
]

[project.scripts]
neurosift-job-runner-3 = "neurosift_job_runner_3.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/neurosift_job_runner_3"]
